# Y2024-25-PR-BB

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  comp.bat  compile_commands.json  imgui.ini  settings.json  version.txt
engine/: CMakeLists.txt  UserInterfaceSystem.cpp  fonts.cpp  main.cpp  user_interface.cpp  user_interface.h
engine/analytics/: CMakeLists.txt
engine/analytics/private/: analytics.cpp  analytics_module.cpp
engine/analytics/public/: analytics_module.hpp
engine/application/: CMakeLists.txt
engine/application/private/: application_module.cpp  input_manager.cpp
engine/application/public/: application_module.hpp  input_manager.hpp  vulkan_include.hpp
engine/audio/: CMakeLists.txt
engine/audio/private/: audio_common.cpp  audio_emitter_component.cpp  audio_listener_component.cpp  audio_module.cpp  audio_system.cpp  fmod_debug.cpp  fmod_debug.hpp  fmod_include.hpp
engine/audio/public/: audio_common.hpp  audio_emitter_component.hpp  audio_listener_component.hpp  audio_module.hpp  audio_system.hpp
engine/bindings/: CMakeLists.txt
engine/bindings/private/: wren_bindings.cpp
engine/bindings/public/: wren_bindings.hpp
engine/bindings/tests/: foreign_data_tests.cpp  main_script_tests.cpp
engine/core/: CMakeLists.txt
engine/core/private/: engine.cpp  main_engine.cpp  time_module.cpp
engine/core/public/: engine.hpp  fwd_core.hpp  main_engine.hpp  module_interface.hpp  time_module.hpp
engine/core/tests/: engine_module_tests.cpp
engine/ecs/: CMakeLists.txt
engine/ecs/private/: ecs_module.cpp
engine/ecs/public/: ecs_module.hpp  system_interface.hpp  wren_entity.hpp
engine/game/: CMakeLists.txt
engine/game/private/: InputBindingsVisualizationCache.cpp  aim_assist.cpp  cheats_component.cpp  engine.cpp  game_module.cpp  game_settings.cpp  input_bindings_visualization_cache.cpp  lifetime_component.cpp  lifetime_system.cpp  ui_menus.cpp
engine/game/public/: InputBindingsVisualizationCache.hpp  aim_assist.hpp  cheats_component.hpp  game_actions.hpp  game_module.hpp  game_settings.hpp  input_bindings_visualization_cache.hpp  input_glyphs.hpp  lifetime_component.hpp  lifetime_system.hpp  ui_menus.hpp
engine/include/: ECS.hpp  UserInterfaceSystem.h  application.hpp  batch_buffer.hpp  bloom_settings.hpp  camera.hpp  class_decorations.hpp  constants.hpp  ecs.hpp  editor.hpp  engine.hpp  engine_init_info.hpp  entity_serializer.hpp  file_watcher.h  fonts.h  frame_graph.hpp  game_actions.hpp  gbuffers.hpp  gpu_resources.hpp  gpu_scene.hpp  hdr_target.hpp  image_resource_manager.hpp  include.hpp  include_cereal.hpp  indirect_culler.hpp  input_manager.hpp  material_resource_manager.hpp  mesh.hpp  mesh_primitives.hpp  model.hpp  model_loader.hpp  old_engine.hpp  pch.hpp  performance_tracker.hpp  pipeline_builder.hpp  prefab.hpp  registry.hpp  renderer.h  renderer.hpp  resource_manager.hpp  (+14 more)
engine/include/components/: RigidbodyComponent.hpp  camera_component.hpp  directional_light_component.hpp  name_component.hpp  point_light_component.hpp  relationship_component.hpp  relationship_helpers.hpp  rigidbody_component.hpp  test_component.hpp  transform_component.hpp  transform_helpers.hpp  world_matrix_component.hpp
engine/include/lib/: include_fastgltf.hpp  includes_vma.hpp  includes_vulkan.hpp
engine/include/modules/: physics_module.hpp
engine/include/particles/: emitter_component.hpp  particle_interface.hpp  particle_pipeline.hpp  particle_util.hpp
engine/include/pipelines/: debug_pipeline.hpp  gaussian_blur_pipeline.hpp  generic_pipeline.cpp  generic_pipeline.h  geometry_pipeline.hpp  ibl_pipeline.hpp  lighting_pipeline.hpp  particle_pipeline.hpp  physics_render_pipeline.hpp  shadow_pipeline.hpp  skydome_pipeline.hpp  tonemapping_pipeline.hpp  (+1 more)
engine/inspector/: CMakeLists.txt
engine/model_loader/: CMakeLists.txt
engine/model_loading/: CMakeLists.txt
engine/particles/: CMakeLists.txt
engine/pathfinding/: CMakeLists.txt
engine/pch/: CMakeLists.txt  pch.hpp
engine/physics/: CMakeLists.txt
engine/renderer/: CMakeLists.txt
engine/resources/: CMakeLists.txt
engine/scripting/: CMakeLists.txt
engine/settings/: CMakeLists.txt
engine/source/: ECS.cpp  UserInterfaceSystem.cpp  application.cpp  batch_buffer.cpp  bloom_settings.cpp  camera.cpp  ecs.cpp  editor.cpp  engine.cpp  fonts.cpp  frame_graph.cpp  gbuffers.cpp  gpu_resources.cpp  gpu_scene.cpp  image_resource_manager.cpp  indirect_culler.cpp  input_manager.cpp  main.cpp  material_resource_manager.cpp  mesh.cpp  mesh_primitives.cpp  model_loader.cpp  performance_tracker.cpp  pipeline_builder.cpp  prefab.cpp  registry.cpp  renderer.cpp  scene_loader.cpp  sdl_app.cpp  shader_reflector.cpp  single_time_commands.cpp  swap_chain.cpp  ui_animation.cpp  ui_animation.h  ui_core.cpp  vma_impl.cpp  vulkan_brain.cpp  vulkan_cpu_allocator.cpp  vulkan_helper.cpp  vulkan_validation.cpp  (+1 more)
engine/src/: main.cpp  sdl_app.cpp
engine/steam/: CMakeLists.txt
engine/thread/: CMakeLists.txt
engine/user_interface/: CMakeLists.txt
engine/utility/: CMakeLists.txt
shaders/: CMakeLists.txt  bindless.glsl  bloom_downsample.frag  bloom_downsampling.frag  bloom_upsampling.frag  button_rendering-f.spv  button_rendering.frag  camera.glsl  cluster_aabb_generation.comp  cluster_light_culing.comp  cluster_light_culling.comp  clusters.glsl  culling.comp  debug.frag  debug.vert  decals.comp  downsample_hzb.comp  fxaa.frag  gaussian_blur-f.spv  gaussian_blur.frag  generate_draws.comp  geom-f.spv  geom-v.spv  geom.frag  geom.vert  hashes.glsl  irradiance.frag  lighting-f.spv  lighting.frag  octahedron.glsl  physics-f.spv  physics-v.spv  physics.frag  physics.vert  prefilter.frag  scene.glsl  settings.glsl  shadow-v.spv  shadow.vert  skinned_geom.vert  (+21 more)
shaders/particles/: billboard.vert  emit-c.spv  emit.comp  finish-c.spv  finish.comp  kick_off-c.spv  kick_off.comp  particle.frag  particle_binds.glsl  particle_vars.glsl  rng_helper.glsl  simulate-c.spv  simulate.comp
shaders/scripts/: reflect.py  vk_map.py
(+714 files in other folders)
